Update protocol and add some logging to server