@@ -1,19 +1,18 @@
 package se.mwthinker.rows.game;
 
 import se.mwthinker.rows.protocol.C2sCreateGame;
-import se.mwthinker.rows.protocol.C2sGetRooms;
+import se.mwthinker.rows.protocol.C2sGetGames;
 import se.mwthinker.rows.protocol.C2sJoinGame;
 import se.mwthinker.rows.protocol.Error;
 import se.mwthinker.rows.protocol.Message;
 import se.mwthinker.rows.protocol.ProtocolException;
 import se.mwthinker.rows.protocol.S2cCreatedGame;
-import se.mwthinker.rows.protocol.S2cRooms;
+import se.mwthinker.rows.protocol.S2cGames;
 
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 public class UserHandler {
 	private final GameSessionFactory gameSessionFactory;
@@ -33,7 +32,7 @@ public class UserHandler {
 			switch (message) {
 				case C2sCreateGame ignored -> handleCreateGame(user);
 				case C2sJoinGame joinGame -> handleJoinGame(user, joinGame);
-				case C2sGetRooms ignored -> handleGetRooms(user);
+				case C2sGetGames ignored -> handleGetRooms(user);
 				default -> throw new ProtocolException("Unexpected value: " + message);
 			}
 		}
@@ -60,11 +59,11 @@ public class UserHandler {
 	}
 
 	private void handleGetRooms(User user) {
-		List<S2cRooms.Room> rooms = gameSessionByUser.values().stream()
+		List<S2cGames.Game> games = gameSessionByUser.values().stream()
 				.distinct()
 				.map(GameSession::getRoom)
-				.collect(Collectors.toList());
+				.toList();
 
-		user.sendToClient(new S2cRooms(rooms));
+		user.sendToClient(new S2cGames(games));
 	}
 }
